--- a/src/app/components/signupForm/signupForm.module.css
+++ b/src/app/components/signupForm/signupForm.module.css
@@ -13,7 +13,7 @@
 
 /* sign up form styles */
 /* Form one */
-.signup_form {
+.signup_form_one {
   width: 100%;
 }
 
@@ -24,7 +24,7 @@
   text-align: center;
 }
 
-.signup_form input {
+.signup_form_control input {
   padding: 0.7rem 1rem;
   display: block;
   border-radius: 4px;
@@ -33,7 +33,7 @@
   outline: none;
 }
 
-.signup_form input:focus {
+.signup_form_control input:focus {
   border-bottom: 4px solid var(--charcoal);
   padding-bottom: 0.55rem;
 }
@@ -66,7 +66,7 @@
   display: inline-block;
 }
 
-.signup_form button {
+.signup_form_one button {
   width: 100%;
   padding: 0.7rem 1rem;
   border-radius: 4px;
@@ -164,6 +164,38 @@
   background-color: transparent;
   color: var(--white);
   border: 2px solid var(--white);
+}
+
+/* password input */
+.password_container p {
+  margin-top: 1rem;
+  color: var(--white);
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.password_input_control {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 1rem 0;
+  position: relative;
+}
+
+.password_submit_btn {
+  width: 100%;
+  margin: 1rem 0 0.5rem;
+  padding: 0.7rem 1rem;
+  border-radius: 4px;
+  text-align: center;
+  background-color: var(--golden-yellow);
+}
+
+.eye_icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
