--- a/src/app/components/cart/cart.module.css
+++ b/src/app/components/cart/cart.module.css
@@ -10,20 +10,47 @@
   margin-left: 1rem;
 }
 
-.outer_container h1 {
+.outer_container {
+  min-height: 100vh;
+}
+
+.cart_heading {
+  max-width: 1400px;
   font-family: var(--font-bebas-neue);
   font-size: 3.5rem;
   font-weight: 400;
   letter-spacing: 1.3px;
-  margin: 2rem 0 0 4rem;
+  margin: 2rem auto 0;
+  padding-left: 4rem;
 }
 
 /* cart container styles */
 .cart_container {
+  max-width: 1400px;
   padding: 0 4rem;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  margin: 0 auto 4rem;
+  gap: 3rem;
 }
 
+@media screen and (max-width: 1100px) {
+  .cart_container {
+    padding: 0 3rem;
+  }
 
+  .cart_heading {
+    padding-left: 3rem;
+  }
+}
 
+@media screen and (max-width: 1000px) {
+  .cart_container {
+    display: flex;
+    flex-direction: column-reverse
+  }
+
+  .right_container {
+    margin: 2rem 0;
+  }
+}
