- replaced ioredis with @upstash/redis npm package - completed `store` page frontend implementation - completed backend for the store page with pagination for each category

--- a/src/app/(pages)/(users)/page.module.css
+++ b/src/app/(pages)/(users)/page.module.css
@@ -90,6 +90,11 @@
   height: inherit;
 }
 
+.custom_slide img {
+  object-fit: cover;
+  object-position: center center;
+}
+
 /* brands section */
 .brands_section {
   background-color: var(--charcoal);
