--- a/src/app/(pages)/(users)/store/store.module.css
+++ b/src/app/(pages)/(users)/store/store.module.css
@@ -1,7 +1,3 @@
-.main {
-  padding: 1px 0;
-}
-
 .main section {
   padding: 2rem 3rem;
   margin: 2rem auto;
@@ -66,7 +62,7 @@
   display: grid;
   grid-template-columns: repeat(3, 31%);
   grid-column-gap: 2rem;
-  margin: 2rem 0;
+  margin-top: 2rem;
 }
 
 .purchase_info_point {
@@ -88,6 +84,11 @@
   padding: 1.5rem;
   font-size: 0.8rem;
   align-self: center;
+}
+
+/* 'shop by category' container */
+.shop_by_category_container h1 {
+  text-align: center;
 }
 
 @media screen and (max-width: 1200px) {
