--- a/src/app/components/event/eventContent.module.css
+++ b/src/app/components/event/eventContent.module.css
@@ -49,6 +49,12 @@
 .left_container div {
   display: flex;
   flex-direction: column;
+  margin: 10px 0;
+}
+
+.left_container span {
+  display: inline-block;
+  margin-top: 5px;
 }
 
 .title_label {
@@ -102,7 +108,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(2, auto);
   gap: 2rem 2rem;
-  margin: 300px auto;
+  margin: 300px auto 100px;
 }
 
 .main_container h2 {
@@ -132,6 +138,8 @@
 
 .products_container {
   display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
 
 .artists_container {
@@ -146,6 +154,12 @@
   gap: 1rem;
 }
 
+.artist span {
+  display: inline-block;
+  margin-left: 10px;
+  font-style: italic;
+}
+
 .artist a {
   display: flex;
   align-items: center;
@@ -155,4 +169,63 @@
   color: blue;
   width: 25px;
   height: 25px;
+}
+
+/* highlights container */
+.highlights_container {
+  width: min(80vw, 1200px);
+  margin: 0px auto 150px;
+  padding: 2rem;
+}
+
+.highlights_container h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  font-family: var(--font-bebas-neue);
+  font-weight: 400;
+}
+
+.highlights_inner_container {
+  width: 100%;
+}
+
+.highlights_inner_container img {
+  width: 100%;
+}
+
+@media screen and (max-width: 850px) {
+  .main_container, .highlights_container {
+    width: 95vw;
+  }
+
+  .float_title_container {
+    top: 400px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+  }  
+
+  .horizontal_line {
+    width: 100%;
+    height: 1px;
+    margin: 1rem 0;
+  }
+
+  .left_container {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-right: 0;
+  }
+
+  .right_container {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0;
+  }
+
+  .right_container button {
+    width: 200px;
+  }
 }
