--- a/src/app/components/store/product/product.module.css
+++ b/src/app/components/store/product/product.module.css
@@ -23,6 +23,15 @@
   -moz-user-select: none;
 }
 
+.product_note {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5px 10px;
+  text-align: center;
+  color: white;
+}
+
 .product_container:hover {
   box-shadow: 4px 8px 25px -1px rgba(0,0,0,0.3);
 }
