--- a/src/app/components/profile/sidebar/sidebar.module.css
+++ b/src/app/components/profile/sidebar/sidebar.module.css
@@ -76,3 +76,12 @@
 .submenu_entry_active {
   color: var(--golden-yellow);
 }
+
+.loader_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+
