completed address edit/delete feature in the profile page

--- a/src/app/components/profile/sidebar/sidebar.module.css
+++ b/src/app/components/profile/sidebar/sidebar.module.css
@@ -2,7 +2,7 @@
 /* sidebar styles */
 .profile_sidebar {
   width: 300px;
-  height: 100vh;
+  min-height: 100vh;
   background-color: var(--charcoal);
   color: white;
   overflow: hidden;
