--- a/src/app/components/cart/cartPrice/cartPrice.module.css
+++ b/src/app/components/cart/cartPrice/cartPrice.module.css
@@ -55,4 +55,60 @@
   }  
 }
 
+/* error container styles */
+.error_container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.error_inner_container {
+  width: min(600px, 80%);
+  background-color: white;
+  border-radius: 8px;
+  max-height: 700px;
+  overflow: auto;
+}
+
+.error {
+  margin: 1.4rem 0;
+  padding: 0 2rem 1rem 2rem;
+}
+
+.note {
+  border-bottom: 1px solid var(--tone-black);
+  padding: 1rem 2rem;
+}
+
+.note p {
+  color: var(--tone-black);
+}
+
+.error_actions {
+  margin: 0 2rem 2rem;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.error_actions button {
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+.error_actions button:first-of-type {
+  background-color: var(--charcoal);
+  color: white;
+}
+
+.error_actions button:last-of-type {
+  background-color: transparent;
+  color: var(--charcoal);
+  border: 2px solid var(--charcoal);
+}
