--- a/src/app/(pages)/(admin)/admin/orders/orders.module.css
+++ b/src/app/(pages)/(admin)/admin/orders/orders.module.css
@@ -6,7 +6,7 @@
 .filter_container {
   display: flex;
   gap: 1.5rem;
-  align-items: end;
+  align-items: flex-end;
 }
 
 .filter_container button {
