--- a/src/app/(pages)/(users)/page.module.css
+++ b/src/app/(pages)/(users)/page.module.css
@@ -1,8 +1,10 @@
 /* hero section styles */
 .hero_section {
   background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.4)), url('/images/home/hero_section_bg.jpg');
-  background-size: 110%;
-  background-position: left -25px top -120px;
+  background-size: 100%;
+  /* background-position: left -25px top -120px; */
+  background-position: center center;
+  background-repeat: no-repeat;
   height: 600px;
   color: var(--white);
   display: flex;
@@ -195,10 +197,9 @@
   }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
   .hero_section {
     background-size: 120%;
-    background-position: left -45px top -10px;
   }
 
   .testimonial_section {
@@ -215,8 +216,8 @@
 
 @media screen and (max-width: 800px) {
   .hero_section {
-    background-size: cover;
-    background-position: center;
+    /* background-size: cover;
+    background-position: center; */
   }
 
   .hero_section_main_heading {
@@ -233,6 +234,10 @@
 
   .section {
     padding: 5rem 4rem;
+  }
+
+  .section h1 {
+    font-size: 3rem;
   }
 
   .section p {
@@ -283,8 +288,16 @@
     padding: 5rem 3rem;
   }
 
+  .section h1 {
+    font-size: 2.5rem;
+  }
+
   .section p {
     width: 90%;
+  }
+
+  .cta_section {
+    height: auto;
   }
 
   .cta_section_cta_btns {
