--- a/src/app/components/carousel/home/main/carousel.module.css
+++ b/src/app/components/carousel/home/main/carousel.module.css
@@ -138,7 +138,8 @@
 
 @media screen and (max-width: 450px) {
   .embla {
-    width: 280px;
+    /* width: 280px; */
+    width: 90vw;
     --slide-height: 240px;
     --slide-spacing: 1rem;
   }
